--- a/scss/page/_careers.scss
+++ b/scss/page/_careers.scss
@@ -434,3 +434,27 @@
         }
     }
 }
+// read the latest news 
+#readTheLatestNews {
+    .card_wrap {
+        margin-bottom: 0px;
+    }
+} 
+// our north family folks background wrapper 
+.ourNorthFriendlyFolksBackgroundWrapper {
+    @include resp ($md) {
+        padding-bottom: 40px;
+    }
+    @include resp ($lg) {
+        padding-bottom: 80px;
+    }
+    @include resp ($xl) {
+        padding-bottom: 100px;
+    }
+    @include resp ($xxl) {
+        padding-bottom: 130px;
+    }
+    @include resp ($mxl) {
+        padding-bottom: 160px;
+    }
+}
