--- a/scss/page/_careers.scss
+++ b/scss/page/_careers.scss
@@ -266,7 +266,7 @@
         }
     }
     // interested to join with us
-    #interestedJoinUs {
+    @at-root #interestedJoinUs {
         .tittle_wrap {
             @include resp($xl) {
                 flex-basis: 40%;
@@ -417,6 +417,9 @@
                         font-size: 14px;
                         @include resp($md) {
                             font-size: 16px;
+                        }
+                        @include resp ($xl) {
+                            font-size: 15px;
                         }
                     }
                 }
