page effect added on about us page

--- a/scss/assets/_variable.scss
+++ b/scss/assets/_variable.scss
@@ -10,6 +10,7 @@ $little-red: #ff0000;
 $bgWhite: #f6f6f6;
 $goldBlack: #030015;
 $halfDark: #484848;
+$borderColor: #CECECE;
 
 .semiWhite {
     color: $bgWhite;
