--- a/css/main.css
+++ b/css/main.css
@@ -4006,12 +4006,31 @@ main #mainContainer .card__element:nth-child(4) {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  justify-items: center;
+}
+#founder .container .founder-bg {
+  height: 99.6%;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-color: white;
+  transform: rotate(-0.5deg);
+  border: 1px solid #CECECE;
+  transform: skewY(-0.8deg) translateY(3px) rotate(-0.5deg);
+}
+@media only screen and (min-width: 425px) {
+  #founder .container .founder-bg {
+    width: 95%;
+  }
 }
 #founder .container .founder-wrapper {
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 30px;
+  border: 1px solid #CECECE;
 }
 @media only screen and (min-width: 425px) {
   #founder .container .founder-wrapper {
