--- a/scss/page/_contact-us.scss
+++ b/scss/page/_contact-us.scss
@@ -100,6 +100,33 @@
                 @include resp($xxl) {
                     padding: 70px 75px !important;
                 }
+                // info icon 
+                .info {
+                    background: url('../img/contact-us/info.svg') no-repeat center center;
+                    background-size: 17px;
+                    width: 17px;
+                    height: 17px;
+                    display: inline-block;
+                    margin-bottom: -6px;
+                    position: relative;
+                    cursor: pointer;
+                    &::after {
+                        display: none;
+                        content: "If you are our client, you are going to get priority. If you are not, you are going to get a 60 min free consultation, where we identify the issue and attempt to solve it.";
+                        width: 250px;
+                        background-color: white;
+                        padding: 20px;
+                        border-radius: 0.5px;
+                        position: absolute;
+                        left: 19px;
+                        top: 7px;
+                        z-index: 5000;
+                        box-shadow: 1px 1px 10px #e7e6e6, -1px -1px 10px #e7e6e6;
+                    }
+                    &:hover::after {
+                        display: block;
+                    }
+                }
                 // para section
                 .para {
                     @include resp($lg) {
